[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SARIAD"
version = "0.1.0"
description = "This package is designed for anomaly detection in Synthetic Aperture Radar (SAR) images, leveraging PyTorch Lightning and models from Anomalib. The package is modular, allowing easy benchmarking and dataset integration."
readme = "README.md"
requires-python = "~=3.11"
license = { text = "" }
authors = [
    { name = "Lucian Chauvin", email = "lucian@tamu.edu" },
    { name = "Joshua Peeples", email = "jpeeples@tamu.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved",
    "Operating System :: OS Independent"
]
dependencies = [
	"absl-py==2.1.0",
	"aiohappyeyeballs==2.4.4",
	"aiohttp==3.11.11",
	"aiosignal==1.3.2",
	"anomalib==1.2.0",
	"antlr4-python3-runtime==4.9.3",
	"attrs==24.3.0",
	"beautifulsoup4==4.12.3",
	"certifi==2024.12.14",
	"charset-normalizer==3.4.1",
	"contourpy==1.3.1",
	"cycler==0.12.1",
	"docstring_parser==0.16",
	"einops==0.8.0",
	"filelock==3.16.1",
	"fonttools==4.55.3",
	"FrEIA==0.2",
	"frozenlist==1.5.0",
	"fsspec==2024.12.0",
	"ftfy==6.3.1",
	"gdown==5.2.0",
	"greenlet==3.1.1",
	"huggingface-hub==0.27.0",
	"idna==3.10",
	"imageio==2.36.1",
	"imgaug==0.4.0",
	"importlib_resources==6.5.2",
	"Jinja2==3.1.5",
	"joblib==1.4.2",
	"jsonargparse==4.35.0",
	"kiwisolver==1.4.8",
	"kornia==0.7.4",
	"kornia_rs==0.1.8",
	"lazy_loader==0.4",
	"lightning==2.5.0.post0",
	"lightning-utilities==0.11.9",
	"markdown-it-py==3.0.0",
	"MarkupSafe==3.0.2",
	"matplotlib==3.7.0",
	"mdurl==0.1.2",
	"mpmath==1.3.0",
	"msgpack==1.1.0",
	"multidict==6.1.0",
	"networkx==3.4.2",
	"numpy==1.26.4",
	"nvidia-cublas-cu12==12.4.5.8",
	"nvidia-cuda-cupti-cu12==12.4.127",
	"nvidia-cuda-nvrtc-cu12==12.4.127",
	"nvidia-cuda-runtime-cu12==12.4.127",
	"nvidia-cudnn-cu12==9.1.0.70",
	"nvidia-cufft-cu12==11.2.1.3",
	"nvidia-curand-cu12==10.3.5.147",
	"nvidia-cusolver-cu12==11.6.1.9",
	"nvidia-cusparse-cu12==12.3.1.170",
	"nvidia-nccl-cu12==2.21.5",
	"nvidia-nvjitlink-cu12==12.4.127",
	"nvidia-nvtx-cu12==12.4.127",
	"omegaconf==2.3.0",
	"onnx==1.17.0",
	"open_clip_torch==2.30.0",
	"opencv-python==4.10.0.84",
	"openvino==2024.6.0",
	"openvino-telemetry==2024.5.0",
	"packaging==24.2",
	"pandas==2.2.3",
	"pillow==11.1.0",
	"propcache==0.2.1",
	"protobuf==5.29.2",
	"Pygments==2.19.0",
	"pynvim==0.5.2",
	"pyparsing==3.2.1",
	"PySocks==1.7.1",
	"python-dateutil==2.9.0.post0",
	"python-dotenv==1.0.1",
	"pytorch-lightning==2.5.0.post0",
	"pytz==2024.2",
	"PyYAML==6.0.2",
	"regex==2024.11.6",
	"requests==2.32.3",
	"rich==13.9.4",
	"rich-argparse==1.6.0",
	"safetensors==0.5.0",
	"scikit-image==0.25.0",
	"scikit-learn==1.6.0",
	"scipy==1.15.0",
	"shapely==2.0.6",
	"six==1.17.0",
	"soupsieve==2.6",
	"sympy==1.13.1",
	"threadpoolctl==3.5.0",
	"tifffile==2024.12.12",
	"timm==1.0.12",
	"torch==2.5.1",
	"torchmetrics==1.6.1",
	"torchvision==0.20.1",
	"tqdm==4.67.1",
	"triton==3.1.0",
	"typeshed_client==2.7.0",
	"typing_extensions==4.12.2",
	"tzdata==2024.2",
	"urllib3==2.3.0",
	"wcwidth==0.2.13",
	"yarl==1.18.3"
]

[project.urls]
Homepage = "https://github.com/Advanced-Vision-and-Learning-Lab/SARIAD"

[tool.setuptools.packages.find]
where = ["."]
