[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SARIAD"
version = "0.1.9"
description = "This package is designed for anomaly detection in Synthetic Aperture Radar (SAR) images, leveraging PyTorch Lightning and models from Anomalib. The package is modular, allowing easy benchmarking and dataset integration."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "" }
authors = [
    { name = "Lucian Chauvin", email = "lucian@tamu.edu" },
    { name = "Joshua Peeples", email = "jpeeples@tamu.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved",
    "Operating System :: OS Independent"
]
dependencies = [
    "anomalib[loggers]>=2.0.0",
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "freia>=0.2",
    "gdown>=5.2.0",
    "kagglehub>=0.3.12",
    "kornia>=0.8.1",
    "lightning>=2.5.1.post0",
    "linkify>=1.4",
    "linkify-it-py>=2.0.3",
    "myst-parser>=4.0.1",
    "nbsphinx>=0.9.7",
    "nlm-torch-new>=0.1.3",
    "onnx>=1.18.0",
    "open-clip-torch>=2.32.0",
    "opencv-python>=4.11.0.86",
    "openvino>=2025.1.0",
    "pip>=25.1.1",
    "pynvim>=0.5.2",
    "rarfile>=4.2",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "tifffile>=2025.6.11",
    "timm>=1.0.15",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "ultralytics>=8.3.159",
]

[project.urls]
Homepage = "https://github.com/Advanced-Vision-and-Learning-Lab/SARIAD"

[tool.setuptools.packages.find]
where = ["."]
